fix authentication, wrong import